force-app/main/default/objects/Trainee__c/Trainee__c.object-meta.xml
<CustomObject>
    <description>Information related to Trainee&apos;s</description>
    <label>Trainee</label>
    <nameField>
        <displayFormat>TRA-{0000}</displayFormat>
        <label>Trainee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>