force-app/main/default/objects/Trainee__c/fields/Aadhaar__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar__c</fullName>
    <label>Aadhaar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>