force-app/main/default/objects/Trainee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>