force-app/main/default/objects/Trainee__c/fields/Availability_Timing__c.field-meta.xml
<CustomField>
    <fullName>Availability_Timing__c</fullName>
    <label>Availability Timing</label>
    <type>Time</type>
</CustomField>