force-app/main/default/objects/Trainee__c/fields/Entrance_Test__c.field-meta.xml
<CustomField>
    <fullName>Entrance_Test__c</fullName>
    <label>Entrance Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>