force-app/main/default/objects/Trainee__c/fields/Previous_Coding_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Previous_Coding_Knowledge__c</fullName>
    <label>Previous Coding Knowledge</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>