force-app/main/default/objects/Trainee__c/fields/Prior_Coding_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Prior_Coding_Knowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Coding Knowledge</label>
    <type>Checkbox</type>
</CustomField>