force-app/main/default/objects/Trainee__c/fields/Queries__c.field-meta.xml
<CustomField>
    <fullName>Queries__c</fullName>
    <label>Queries</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>