force-app/main/default/objects/Trainee__c/fields/Select_Course__c.field-meta.xml
<CustomField>
    <fullName>Select_Course__c</fullName>
    <label>Select Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Pega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>